# python-project-template

./: .gitignore  README.md  conftest.py  dev_requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-ci.yml
src/package_name/: main.py
test/unit/: test_main.py
