# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html
# $XYZ are meant to be edited by hand.
# Remove this preamble.
# This is untested for now.

[metadata]
name = project_name
version = file: version.txt
author = Lucas Viana
author_email = lucas.nviana@gmail.com
url = https://github.com/SenhorLucas/project_name
description = A python project template
long_description = file: README.md
long_description_content_type = text/markdown
# license = GPLv3
# license_file = https://www.gnu.org/licenses/gpl-3.0.txt
# keywords = According to: https://peps.python.org/pep-0314/
classifiers =  # https://pypi.org/classifiers/
    Programming Language :: Python
    Programming Language :: Python :: 3.6


[options]
zip_safe = True
include_package_data = True  # https://packaging.python.org/en/latest/guides/using-manifest-in/
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*, != 3.5.*

# install_requires =
#     docutils

packages =
    package_name
package_dir =
    = src

[coverage:report]  # https://coverage.readthedocs.io/en/latest/config.html
how_missing = true
exclude_lines =
    pragma: no cover
    # if False


[coverage:run]
omit =
    *site-packages*
    *python*
    *__init__*


[pydocstyle]  # http://www.pydocstyle.org/en/stable/usage.html#available-options
# match-dir = (?!tests)[^\.].*  # `?!` match if suffix is abscent.
match = (?!test)[^\._].*\.py
inherit = False
ignore = D203, D213, D406   # http://www.pydocstyle.org/en/2.1.1/error_codes.html


[flake8]  # https://flake8.pycqa.org/en/latest/user/configuration.html
max-line-length = 120
exclude =
    test/*,
    pytest/*,
    .tox/*,
    .git/*,
    .eggs/*,
    __pycache__/*


